syntax = "proto3";

package soma.rpc;

message Shard {
    optional uint32 quorum_threshold = 1;
    repeated string encoders = 2;
    optional bytes seed = 3;
    optional uint64 epoch = 4;
}